[gd_scene load_steps=9 format=3 uid="uid://b8y5q7rqiee2v"]

[ext_resource type="Script" path="res://planets/mars/mars.gd" id="1_g8fur"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_ax6wt"]
[ext_resource type="PackedScene" uid="uid://bc82m3np056ip" path="res://loots/minerals.tscn" id="3_t6x2j"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="4_ed7jo"]
[ext_resource type="Texture2D" uid="uid://dpttmph86baid" path="res://pics/player/rocket.png" id="5_u4saq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mpylk"]
radius = 56.57

[sub_resource type="CircleShape2D" id="CircleShape2D_1rqki"]
radius = 42.0119

[sub_resource type="CircleShape2D" id="CircleShape2D_2skd3"]
radius = 14.0357

[node name="mars" type="Node2D"]
editor_description = "mars"
script = ExtResource("1_g8fur")
player = ExtResource("2_ax6wt")
mars_mineral = ExtResource("3_t6x2j")

[node name="bg" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.207843, 0.313726, 1)
position = Vector2(581, 371)
scale = Vector2(3, 3)
texture = ExtResource("4_ed7jo")

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(624, 412)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_mpylk")

[node name="rocket_upper" type="Sprite2D" parent="spawn_player/takeoff"]
z_index = 5
position = Vector2(0, -169)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_u4saq")
region_enabled = true
region_rect = Rect2(0, 0, 640, 440)

[node name="rocket_lower" type="Sprite2D" parent="spawn_player/takeoff"]
position = Vector2(0, -9)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_u4saq")
region_enabled = true
region_rect = Rect2(0, 440, 640, 200)

[node name="StaticBody2D" type="StaticBody2D" parent="spawn_player"]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(0, -49)
shape = SubResource("CircleShape2D_1rqki")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(49, -39)
shape = SubResource("CircleShape2D_2skd3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(-49, -39)
shape = SubResource("CircleShape2D_2skd3")

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
